--- a/index.html
+++ b/index.html
@@ -21,38 +21,44 @@
         </div>
     </header>
 
-    <section class="1">
+    <section>
         <div class="wrapper">
-            <h2> « L’écriture, la plus noble conquête de l’homme» - Elsa Triolet </h2>
+            <h2> « L’écriture, la plus noble conquête de l’homme»  </h2>
+            <h2> - Elsa Triolet </h2>
 
-            <article>  
-                <p> Quels guillemets choisir pour le Web ? </p>
-            </article>
+            <div class="conteneur1">
+                <article>
+                    <p class="rond"> « </p>
+                    <p> Quels guillemets choisir pour le Web ? </p>
+                </article>
 
-            <article>  
-                <p> Qu’est-ce qu’un espace insécable ? </p>
-            </article>
+                <article>  
+                    <p> Qu’est-ce qu’un espace insécable ? </p>
+                    <p class="rond"> &amp;nbsp </p>
+                </article>
 
-            <article>  
-                <p> S’occuper de la veuve et de l’orphelin. </p>
-            </article>
+                <article>
+                    <p class="rond"> Windows </p>
+                    <p> S’occuper de la veuve et de l’orphelin. </p>
+                </article>
             
-            <article>  
-                <p> Et la hauteur de ligne dans tout ça ? </p>
-            </article>
-
+                <article>  
+                    <p> Et la hauteur de ligne dans tout ça ? </p>
+                    <p class="rond"> line-height </p>
+                </article>
+            </div>
         </div>
     </section>
 
 
-    <section class="2">
+    <section class="conteneur2">
         <div class="wrapper">
             <article>
-                Lors du choix des polices de caractères, un concepteur Web se tourne vers celles conçues pour une bonne lecture à l’écran et qui se retrouvent sur la majorité des plateformes. On recommande ainsi une police sans sérif (sans petites pattes) qui facilite la lecture à l’écran. Pour le choix des polices, Google Font s’avère une ressource très utilisée qui permet de trouver facilement une police qui conviendra à tous les écrans.
+                Lors du choix des polices de caractères, un concepteur Web se tourne vers celles conçues pour une bonne lecture à l’écran et qui se retrouvent sur la majorité des plateformes. On recommande ainsi <strong> une police sans sérif </strong> (sans petites pattes) qui facilite la lecture à l’écran. Pour le choix des polices, <strong> Google Font </strong> s’avère une ressource très utilisée qui permet de trouver facilement une police qui conviendra à tous les écrans.
             </article>
 
             <article>
-                <p> Test à faire en dernier : </p>
+                <p><strong> Test à faire en dernier : </strong></p>
                 <p>Insérez un espace insécable entre le mot «insécable» et le «?» du deuxième article. Observez le résultat lors du  redimensionnement de votre écran.Vous pourrez observer que le «?» suivra toujours le mot qui le précède, ce qui permet d’éviter d’avoir une ponctuation orpheline à la ligne suivante (problème de la veuve et l’orphelin). </p>
             </article>
         </div>
