--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/normalize.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_upward" />
+    
+
     <link rel="stylesheet" href="css/styles.css">
 
     <title> Les Typographies</title>
 </head>
 
 <body>
-    <header>
+    <header id="top">
         <div class="wrapper">
             <h1> La typographie </h1>
         </div>
@@ -32,9 +37,9 @@
                     <p> Quels guillemets choisir pour le Web ? </p>
                 </article>
 
-                <article>  
-                    <p> Qu’est-ce qu’un espace insécable ? </p>
+                <article>
                     <p class="rond"> &amp;nbsp </p>
+                    <p> Qu’est-ce qu’un espace insécable ? </p>
                 </article>
 
                 <article>
@@ -43,23 +48,23 @@
                 </article>
             
                 <article>  
-                    <p> Et la hauteur de ligne dans tout ça ? </p>
                     <p class="rond"> line-height </p>
+                    <p> Et la hauteur de ligne dans tout ça ? </p>
                 </article>
             </div>
         </div>
     </section>
 
 
-    <section class="conteneur2">
+    <section class="name">
         <div class="wrapper">
             <article>
-                Lors du choix des polices de caractères, un concepteur Web se tourne vers celles conçues pour une bonne lecture à l’écran et qui se retrouvent sur la majorité des plateformes. On recommande ainsi <strong> une police sans sérif </strong> (sans petites pattes) qui facilite la lecture à l’écran. Pour le choix des polices, <strong> Google Font </strong> s’avère une ressource très utilisée qui permet de trouver facilement une police qui conviendra à tous les écrans.
+                <p> Lors du choix des polices de caractères, un concepteur Web se tourne vers celles conçues pour une bonne lecture à l’écran et qui se retrouvent sur la majorité des plateformes. On recommande ainsi <strong> une police sans sérif </strong> (sans petites pattes) qui facilite la lecture à l’écran. Pour le choix des polices, <strong> Google Font </strong> s’avère une ressource très utilisée qui permet de trouver facilement une police qui conviendra à tous les écrans. </p>
             </article>
 
             <article>
                 <p><strong> Test à faire en dernier : </strong></p>
-                <p>Insérez un espace insécable entre le mot «insécable» et le «?» du deuxième article. Observez le résultat lors du  redimensionnement de votre écran.Vous pourrez observer que le «?» suivra toujours le mot qui le précède, ce qui permet d’éviter d’avoir une ponctuation orpheline à la ligne suivante (problème de la veuve et l’orphelin). </p>
+                <p>Insérez un espace insécable entre le mot «insécable» et le «?» du deuxième &lt;article&gt; . Observez le résultat lors du  redimensionnement de votre écran.Vous pourrez observer que le «?» suivra toujours le mot qui le précède, ce qui permet d’éviter d’avoir une ponctuation orpheline à la ligne suivante (problème de la veuve et l’orphelin). </p>
             </article>
         </div>
     </section>
@@ -68,7 +73,7 @@
         <div class="wrapper">
             <p> La typographie </p>
 
-
+            <p class="icon"><a href="#top"><span class="material-symbols-outlined"> arrow_upward </span></a></p>
         </div>
     </footer>
 </body>
