--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
 
             <div class="conteneur1">
                 <article>
-                    <p class="rond"> « </p>
+                    <h3 class="rond"><strong> « </strong></h3>
                     <p> Quels guillemets choisir pour le Web ? </p>
                 </article>
 
-                <article>
-                    <p class="rond"> &amp;nbsp </p>
+                <article class="droite">
+                    <h3 class="rond"><strong> &amp;nbsp </strong></h3>
                     <p> Qu’est-ce qu’un espace insécable ? </p>
                 </article>
 
                 <article>
-                    <p class="rond"> Windows </p>
+                    <h3 class="rond"><strong> Windows </strong></h3>
                     <p> S’occuper de la veuve et de l’orphelin. </p>
                 </article>
             
-                <article>  
-                    <p class="rond"> line-height </p>
+                <article class="droite">  
+                    <h3 class="rond"><strong> line-height </strong></h3>
                     <p> Et la hauteur de ligne dans tout ça ? </p>
                 </article>
             </div>
@@ -56,7 +56,7 @@
     </section>
 
 
-    <section class="name">
+    <section class="info">
         <div class="wrapper">
             <article>
                 <p> Lors du choix des polices de caractères, un concepteur Web se tourne vers celles conçues pour une bonne lecture à l’écran et qui se retrouvent sur la majorité des plateformes. On recommande ainsi <strong> une police sans sérif </strong> (sans petites pattes) qui facilite la lecture à l’écran. Pour le choix des polices, <strong> Google Font </strong> s’avère une ressource très utilisée qui permet de trouver facilement une police qui conviendra à tous les écrans. </p>
@@ -73,7 +73,7 @@
         <div class="wrapper">
             <p> La typographie </p>
 
-            <p class="icon"><a href="#top"><span class="material-symbols-outlined"> arrow_upward </span></a></p>
+            <a href="#top" class="icon"><span class="material-symbols-outlined"> arrow_upward </span></a>
         </div>
     </footer>
 </body>
