--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <section>
         <div class="wrapper">
-            <h2> « L’écriture, la plus noble conquête de l’homme»  </h2>
-            <h2> - Elsa Triolet </h2>
+            <h2 class="citation"> « L’écriture, la plus noble conquête de l’homme» </h2>
+            <h2 class="Elsa"> - Elsa Triolet </h2>
 
             <div class="conteneur1">
                 <article>
